training for all cols

--- a/evals.ipynb
+++ b/evals.ipynb
@@ -22,11 +22,11 @@
     "import datasets\n",
     "import os\n",
     "\n",
-    "cols = ['age', 'workclass', 'fnlwgt', 'income']\n",
+    "# cols = ['age', 'workclass', 'fnlwgt', 'income']\n",
     "\n",
     "real_path = '/hdd3/sonia/data/adult.csv'\n",
-    "dgpt2_path = '/hdd3/sonia/be_great/ckpts/dgpt2/adult-4col/samples.csv'\n",
-    "moe_path = '/hdd3/sonia/be_great/ckpts/moe/dgpt2/adult-4col/jul16/samples.csv'"
+    "dgpt2_path = '/hdd3/sonia/be_great/ckpts/dgpt2/adult-allcol/samples.csv'\n",
+    "moe_path = '/hdd3/sonia/be_great/ckpts/moe/dgpt2/adult-allcol/jul17/samples.csv'"
    ]
   },
   {
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "((358, 4), (358, 4), (358, 4))"
+       "((3880, 15), (3880, 15), (3880, 15))"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "real = pd.read_csv(real_path)[cols]\n",
+    "real = pd.read_csv(real_path)#[cols]\n",
     "dgpt2= pd.read_csv(dgpt2_path)\n",
     "moe  = pd.read_csv(moe_path)\n",
     "\n",
@@ -81,32 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([' <=50K', ' >50K'], dtype=object)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "real['income'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ords = ['workclass'] # MUST BE IN ORDER\n",
-    "nums = ['age', 'fnlwgt',]\n",
+    "ords = ['workclass', 'education', 'marital-status', 'occupation', \n",
+    "        'relationship', 'race', 'sex', 'native-country', 'income'] # MUST BE IN ORDER\n",
+    "nums = ['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week', ]\n",
     "labs = ['income']\n",
     "\n",
     "# for each ord column, get all unique values occurign in real/synth, train/test\n",
@@ -156,8 +137,7 @@
      "output_type": "stream",
      "text": [
       "real\n",
-      "dgpt2\n",
-      "moe\n"
+      "dgpt2\n"
      ]
     },
     {
@@ -167,7 +147,20 @@
       "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/sklearn/base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n",
       "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/sklearn/base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/sklearn/base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n"
      ]
@@ -184,13 +177,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -199,13 +185,13 @@
      "output_type": "stream",
      "text": [
       "real on real: \t\t\t1.0\n",
-      "dgpt2 on real: \t\t\t0.6396648044692738\n",
-      "moe on real: \t\t\t0.7374301675977654\n",
-      "real on dgpt2: \t\t\t0.6536312849162011\n",
+      "dgpt2 on real: \t\t\t0.23969072164948454\n",
+      "moe on real: \t\t\t0.23969072164948454\n",
+      "real on dgpt2: \t\t\t0.3804123711340206\n",
       "dgpt2 on dgpt2: \t\t\t1.0\n",
-      "moe on dgpt2: \t\t\t0.6396648044692738\n",
-      "real on moe: \t\t\t0.8184357541899442\n",
-      "dgpt2 on moe: \t\t\t0.7150837988826816\n",
+      "moe on dgpt2: \t\t\t1.0\n",
+      "real on moe: \t\t\t0.04407216494845361\n",
+      "dgpt2 on moe: \t\t\t1.0\n",
       "moe on moe: \t\t\t1.0\n"
      ]
     }
