evals all but moegreatdgpt2

--- a/evals.ipynb
+++ b/evals.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -26,21 +26,29 @@
     "\n",
     "real_path = '/hdd3/sonia/data/adult.csv'\n",
     "dgpt2_path = '/hdd3/sonia/be_great/ckpts/dgpt2/adult-allcol/samples.csv'\n",
-    "moe_path = '/hdd3/sonia/be_great/ckpts/moe/dgpt2/adult-allcol/jul17/samples.csv'"
+    "moe_path = '/hdd3/sonia/be_great/ckpts/moe/dgpt2/adult-allcol/jul21/samplesclean.csv'\n",
+    "greatdpt2_path = '/hdd3/sonia/be_great/ckpts/dgpt2-greatclean.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(48842, 15) (5935, 15) (9106, 15) (9815, 15)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "((3880, 15), (3880, 15), (3880, 15))"
+       "((5935, 15), (5935, 15), (5935, 15), (5935, 15))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,39 +57,42 @@
     "real = pd.read_csv(real_path)#[cols]\n",
     "dgpt2= pd.read_csv(dgpt2_path)\n",
     "moe  = pd.read_csv(moe_path)\n",
+    "greatdgpt2=pd.read_csv(greatdpt2_path)\n",
+    "print(real.shape, dgpt2.shape, moe.shape, greatdgpt2.shape)\n",
     "\n",
-    "rs = 30\n",
-    "min_dataset_size = min(len(real), len(dgpt2), len(moe))\n",
+    "rs = 2\n",
+    "min_dataset_size = min(len(real), len(dgpt2), len(moe), len(greatdgpt2))\n",
     "real = real.sample(min_dataset_size, random_state=rs)\n",
     "dgpt2=dgpt2.sample(min_dataset_size, random_state=rs)\n",
     "moe  =  moe.sample(min_dataset_size, random_state=rs)\n",
-    "real.shape, dgpt2.shape, moe.shape"
+    "greatdgpt2 = greatdgpt2.sample(min_dataset_size, random_state=rs)\n",
+    "real.shape, dgpt2.shape, moe.shape, greatdgpt2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['real', 'dgpt2', 'moe'])"
+       "dict_keys(['real', 'dgpt2', 'moe', 'greatdgpt2'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datadict = {'real':real, 'dgpt2':dgpt2, 'moe':moe,}\n",
+    "datadict = {'real':real, 'dgpt2':dgpt2, 'moe':moe, 'greatdgpt2':greatdgpt2}\n",
     "datadict.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +107,7 @@
     "    s = set(real[name].unique().tolist())\n",
     "    s.update(dgpt2[name].unique().tolist())\n",
     "    s.update(moe[name].unique().tolist())\n",
+    "    s.update(greatdgpt2[name].unique().tolist())\n",
     "    \n",
     "    categories.append( list(s) )\n",
     "categories\n",
@@ -107,12 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_pipeline(trainset):\n",
-    "    rfc = ensemble.RandomForestClassifier()\n",
+    "    rfc = ensemble.RandomForestClassifier(n_estimators=10, max_depth=4)\n",
     "    preprocessing_pipeline = compose.ColumnTransformer([\n",
     "        (\"ordinal_preprocessor\", ordenc, ords),\n",
     "        (\"numerical_preprocessor\", numenc, nums),\n",
@@ -122,14 +134,14 @@
     "        (\"estimator\", rfc)\n",
     "    ])\n",
     "    \n",
-    "    preprocessed_labels = lb.fit_transform(trainset[labs])\n",
+    "    preprocessed_labels = lb.fit_transform(trainset[labs].values.ravel()).ravel()\n",
     "    complete_pipeline.fit(trainset[ords+nums], preprocessed_labels)\n",
     "    return complete_pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -137,32 +149,9 @@
      "output_type": "stream",
      "text": [
       "real\n",
-      "dgpt2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/sklearn/base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n",
-      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/sklearn/base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moe\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/sklearn/base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
+      "dgpt2\n",
+      "moe\n",
+      "greatdgpt2\n"
      ]
     }
    ],
@@ -177,22 +166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "real on real: \t\t\t1.0\n",
-      "dgpt2 on real: \t\t\t0.23969072164948454\n",
-      "moe on real: \t\t\t0.23969072164948454\n",
-      "real on dgpt2: \t\t\t0.3804123711340206\n",
-      "dgpt2 on dgpt2: \t\t\t1.0\n",
-      "moe on dgpt2: \t\t\t1.0\n",
-      "real on moe: \t\t\t0.04407216494845361\n",
-      "dgpt2 on moe: \t\t\t1.0\n",
-      "moe on moe: \t\t\t1.0\n"
+      "real on real: \t\t\t0.9826453243470935\n",
+      "dgpt2 on real: \t\t\t0.010278011794439764\n",
+      "moe on real: \t\t\t0.27363100252737993\n",
+      "greatdgpt2 on real: \t\t\t0.32299915754001685\n",
+      "real on dgpt2: \t\t\t0.3467565290648694\n",
+      "dgpt2 on dgpt2: \t\t\t0.9976411120471778\n",
+      "moe on dgpt2: \t\t\t0.9816343723673125\n",
+      "greatdgpt2 on dgpt2: \t\t\t0.9511373209772536\n",
+      "real on moe: \t\t\t0.3363100252737995\n",
+      "dgpt2 on moe: \t\t\t0.998989048020219\n",
+      "moe on moe: \t\t\t0.9939342881213142\n",
+      "greatdgpt2 on moe: \t\t\t0.9755686604886268\n",
+      "real on greatdgpt2: \t\t\t0.4306655433866891\n",
+      "dgpt2 on greatdgpt2: \t\t\t1.0\n",
+      "moe on greatdgpt2: \t\t\t0.9962931760741365\n",
+      "greatdgpt2 on greatdgpt2: \t\t\t0.9885425442291491\n"
      ]
     }
    ],
