load trained MOE models into great

--- a/loading.ipynb
+++ b/loading.ipynb
@@ -2,33 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from multihead_models import *\n",
+    "from be_great.multihead_models import *\n",
     "import torch\n",
     "import transformers \n",
     "\n",
     "dgpt2 = transformers.AutoModelForCausalLM.from_pretrained('distilgpt2')\n",
-    "num_experts = 3\n",
+    "num_experts = 15\n",
     "dgpt2copy = MOEModelForCausalLM(dgpt2, num_experts=num_experts)\n",
     "\n",
     "tokenizer = transformers.AutoTokenizer.from_pretrained(\"distilgpt2\")\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
+    "special_tokens_dict = {\"bos_token\": \"<BOS>\", 'eos_token': '<EOS>'}\n",
+    "num_added_toks = tokenizer.add_special_tokens(special_tokens_dict)\n",
+    "# dgpt2copy.resize_token_embeddings(len(tokenizer))\n",
     "\n",
-    "dgpt2copy.load_state_dict(torch.load('moedgpt2.pt'))"
+    "dgpt2copy.load_state_dict(torch.load('/hdd3/sonia/be_great/ckpts/great/adult/moe/dgpt2/jul24/checkpoint-5/model.pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dgpt2copy.set_generation_mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "A decoder-only architecture is being used, but right-padding was detected! For correct generation results, please set `padding_side='left'` when initializing the tokenizer.\n",
+      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/transformers/generation/utils.py:1132: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['<|endoftext|> The U.S. Department of Justice has been investigating the death of a former FBI agent in']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.batch_decode(dgpt2copy.generate())"
    ]
   },
   {
