--- a/evals.ipynb
+++ b/evals.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/hdd2/sonia/miniconda3/envs/great/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "((5935, 15), (5935, 15), (5935, 15), (5935, 15))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "dict_keys(['real', 'dgpt2', 'moe', 'greatdgpt2'])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "ords = ['workclass', 'education', 'marital-status', 'occupation', \n",
-    "        'relationship', 'race', 'sex', 'native-country', 'income'] # MUST BE IN ORDER\n",
+    "        'relationship', 'race', 'sex', 'native-country'] # MUST BE IN ORDER\n",
     "nums = ['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week', ]\n",
     "labs = ['income']\n",
     "\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,29 +166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "real on real: \t\t\t0.9826453243470935\n",
-      "dgpt2 on real: \t\t\t0.010278011794439764\n",
-      "moe on real: \t\t\t0.27363100252737993\n",
-      "greatdgpt2 on real: \t\t\t0.32299915754001685\n",
-      "real on dgpt2: \t\t\t0.3467565290648694\n",
-      "dgpt2 on dgpt2: \t\t\t0.9976411120471778\n",
-      "moe on dgpt2: \t\t\t0.9816343723673125\n",
-      "greatdgpt2 on dgpt2: \t\t\t0.9511373209772536\n",
-      "real on moe: \t\t\t0.3363100252737995\n",
-      "dgpt2 on moe: \t\t\t0.998989048020219\n",
-      "moe on moe: \t\t\t0.9939342881213142\n",
-      "greatdgpt2 on moe: \t\t\t0.9755686604886268\n",
-      "real on greatdgpt2: \t\t\t0.4306655433866891\n",
-      "dgpt2 on greatdgpt2: \t\t\t1.0\n",
-      "moe on greatdgpt2: \t\t\t0.9962931760741365\n",
-      "greatdgpt2 on greatdgpt2: \t\t\t0.9885425442291491\n"
+      "real on real: \t\t\t0.8438079191238416\n",
+      "dgpt2 on real: \t\t\t0.7922493681550127\n",
+      "moe on real: \t\t\t0.763100252737995\n",
+      "greatdgpt2 on real: \t\t\t0.7897219882055603\n",
+      "real on dgpt2: \t\t\t0.7118786857624263\n",
+      "dgpt2 on dgpt2: \t\t\t0.776748104465038\n",
+      "moe on dgpt2: \t\t\t0.7529907329401854\n",
+      "greatdgpt2 on dgpt2: \t\t\t0.7369839932603202\n",
+      "real on moe: \t\t\t0.6480202190395956\n",
+      "dgpt2 on moe: \t\t\t0.7590564448188711\n",
+      "moe on moe: \t\t\t0.8033698399326032\n",
+      "greatdgpt2 on moe: \t\t\t0.7492839090143218\n",
+      "real on greatdgpt2: \t\t\t0.7617523167649537\n",
+      "dgpt2 on greatdgpt2: \t\t\t0.783150800336984\n",
+      "moe on greatdgpt2: \t\t\t0.7403538331929234\n",
+      "greatdgpt2 on greatdgpt2: \t\t\t0.809435551811289\n"
      ]
     }
    ],
