--- a/parse.ipynb
+++ b/parse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "pathoh = '/hdd3/sonia/be_great/ckpts/dgpt2/adult-allcol/samples'\n",
     "pathreal = '/hdd3/sonia/data/adult.csv'\n",
     "pathgreatdgpt2 = '/hdd3/sonia/be_great/ckpts/dgpt2-great'\n",
-    "path = pathmoe"
+    "pathgreatmoe = '/hdd3/sonia/be_great/ckpts/great/adult/moe/dgpt2/jul24/samples'\n",
+    "path = pathgreatmoe"
    ]
   },
   {
@@ -27,6 +28,57 @@
    "metadata": {},
    "source": [
     "### From text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'education': 'HS-grad', 'age': '19', 'workclass': 'Private'},\n",
+       " {'age': '36', 'education': 'Assoc-voc', 'workclass': 'Private'},\n",
+       " {'education': 'Masters', 'workclass': 'Private', 'age': '35'},\n",
+       " {'education': 'Bachelors', 'age': '26', 'workclass': 'Private'}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(path+'.txt', 'r') as f:\n",
+    "    raws = f.readlines()\n",
+    "\n",
+    "realcols = set(['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status', 'occupation', \n",
+    "            'relationship', 'race', 'sex', 'capital-gain', 'capital-loss', 'hours-per-week', 'native-country', 'income'])\n",
+    "    \n",
+    "# get labels\n",
+    "rawfeats = []\n",
+    "labels = []\n",
+    "for l in raws:\n",
+    "    h = l.split(',')\n",
+    "    labels.append(h[0][len('income is  '): ])\n",
+    "    rawfeats.append(h[1])\n",
+    "\n",
+    "rows = []\n",
+    "for l, label in zip(rawfeats, labels):\n",
+    "    rawfeatslist = l.split('<EOS>')[1:]\n",
+    "    \n",
+    "    row = {}\n",
+    "    for rawfeat in rawfeatslist:\n",
+    "        words = rawfeat[:-1].split(' ') # remove period or newline at end\n",
+    "        colname = words[0]\n",
+    "        feat = words[-1]\n",
+    "        if colname in ['age', 'workclass', 'education']:\n",
+    "            row[colname] = feat\n",
+    "    if set(row.keys()) == set(['age', 'workclass', 'education']):\n",
+    "        rows.append(row)\n",
+    "    \n",
+    "rows"
    ]
   },
   {
